--- a/src/assets/css/theme-dark.scss
+++ b/src/assets/css/theme-dark.scss
@@ -1,4 +1,5 @@
 /** 主题样式 **/
+@import "../libs/element-variables-base";
 @import './theme/dark';
 @import "../libs/element-variables-dark";
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
