--- a/src/assets/css/theme-default.scss
+++ b/src/assets/css/theme-default.scss
@@ -1,4 +1,5 @@
 /** 主题样式 **/
+@import "../libs/element-variables-base";
 @import './theme/default';
 @import "../libs/element-variables-default";
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
